After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708346 - gnome-terminal does not respect "Disable mnemonics" and "Disable menubar F10" settings in preferences
gnome-terminal does not respect "Disable mnemonics" and "Disable menubar F10"...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
: 709764 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-09-19 07:35 UTC by Ankur Sinha (FranciscoD)
Modified: 2014-03-25 00:18 UTC
See Also:
GNOME target: 3.12
GNOME version: ---


Attachments
patch to allow disabling mnemonics in gtkwindow (1.85 KB, patch)
2013-10-13 14:22 UTC, j.wellhoefer
none Details | Review
same patch as above, but with "From:" line (1.91 KB, patch)
2013-10-13 14:34 UTC, j.wellhoefer
committed Details | Review
window: Respect gtk-enable-mnemonics setting (2.01 KB, patch)
2014-03-24 18:09 UTC, Volker Sobek (weld)
none Details | Review

Description Ankur Sinha (FranciscoD) 2013-09-19 07:35:29 UTC
Description of problem:
Since I use irssi, I'd like to be able to use my "q,w,e,r,t,y.." keyboard row to access channels 11-20. However, gnome-terminal doesn't release these, even after I've unchecked the "Enable mnemonics" setting in preferences. 

Version-Release number of selected component (if applicable):
gnome-terminal-3.9.90-1.fc20.x86_64

How reproducible:
Always

Steps to Reproduce:
1.Disable mnemonics in preferences
2.try alt + e
3.

Actual results:
Still opens the edit menu

Expected results:
Should not open the edit menu.

Additional info:
Would it be possible to disable all terminal shortcuts? For example, I manually disabled the "alt 1-0" shortcuts so I could use them in irssi.

Downstream bug: https://bugzilla.redhat.com/show_bug.cgi?id=1009786
Comment 1 Christian Persch 2013-09-19 10:33:56 UTC
Gtk+ bug. Commit 7e3a494fac62140f466fc43f6cc061215953e9b1 deprecated the gtk-enable-mnemonics setting, and removed all code to handle it.
Comment 2 Christian Persch 2013-09-19 17:04:44 UTC
Also the disabling of F10 is broken in g-t, due to gtk commit b26c74e5dac0b5fd869d2c8cc7a0edb6b01aeebd which deprecate-and-ignore'd the gtk-menu-bar-accel setting.
Comment 3 Ankur Sinha (FranciscoD) 2013-09-20 00:28:29 UTC
Ah! Thanks Christian.

Are these going to be re-added in Gtk+, or are these settings going to be removed in g-t? I mean, what is the solution forward from here? Does this mean there won't be a way of disabling these at all?

Warm regards,
Ankur
Comment 4 Matthias Clasen 2013-09-26 00:05:53 UTC
this should work with 3.10 - gnome-terminal should still be working towards another solution
Comment 5 Ankur Sinha (FranciscoD) 2013-09-30 01:27:02 UTC
Should I now file a bug against gnome-terminal, since the mnemonic settings are still useless there as of 3.10?

[asinha@localhost  ~]$ rpm -q gnome-terminal
gnome-terminal-3.10.0-1.fc20.x86_64
[asinha@localhost  ~]$
Comment 6 Christian Persch 2013-09-30 08:42:28 UTC
Which gtk3 version? And did you make sure to restart gnome-terminal-server process after the upgrade?

In future this will be fixed in g-t by removing the menubar (bug 672433).
Comment 7 Ankur Sinha (FranciscoD) 2013-09-30 13:38:12 UTC
[asinha@localhost  ~]$ rpm -q gtk3
gtk3-3.10.0-1.fc20.x86_64

I have restarted the system since the update, yes. 

I'll recheck again, though, just to be sure.

Thanks,
Ankur
Comment 8 Ankur Sinha (FranciscoD) 2013-10-07 02:56:07 UTC
Yep. I've restarted the system but the mnemonics still work here. I even have the option unselected in preferences:

gtk3-3.10.0-1.fc20.x86_64
gnome-terminal-3.10.0-1.fc20.x86_64

Thanks,
Ankur
Comment 9 Jakub Hrozek 2013-10-07 09:29:49 UTC
I'm still seeing this bug in F-20 with gtk3-3.10.0-1.fc20.x86_64 and gnome-terminal-3.10.0-1.fc20.x86_64

This bug makes using emacs-like keybindings (Alt+b) pretty much useless in gnome-terminal.
Comment 10 Christian Persch 2013-10-12 10:17:15 UTC
*** Bug 709764 has been marked as a duplicate of this bug. ***
Comment 11 Christian Persch 2013-10-12 10:18:25 UTC
This works as expected when running with gtk 3.8, so someone will need to git bisect between 3.8.0 and 3.10.0 tags to find which commit broke this (and why the revert doesn't fix it).
Comment 12 Christian Persch 2013-10-12 10:19:50 UTC
https://wiki.gnome.org/Apps/Terminal/Debugging will come in handy when doing the bisect.
Comment 13 j.wellhoefer 2013-10-13 13:44:13 UTC
I bisected gtk+ and found the commit: 7e3a494fac62140f466fc43f6cc061215953e9b1 .

Are there any gt developers reading this? Maybe it's obvious to them how to fix this in gt?
Comment 14 Dominique Leuenberger 2013-10-13 13:48:11 UTC
And that's what https://git.gnome.org/browse/gtk+/commit/?h=gtk-3-10&id=34cf40e95cb1f0bc4bb98bb14edb03dd86f1dab3 reverted partially... to no success.
Comment 15 j.wellhoefer 2013-10-13 14:22:39 UTC
Created attachment 257172 [details] [review]
patch to allow disabling mnemonics in gtkwindow
Comment 16 j.wellhoefer 2013-10-13 14:23:50 UTC
The part in GtkWindow wasn't restored. The patch above against 34cf40e95cb1f0bc4bb98bb14edb03dd86f1dab3 fixes that.
Comment 17 j.wellhoefer 2013-10-13 14:34:54 UTC
Created attachment 257173 [details] [review]
same patch as above, but with "From:" line
Comment 18 Dominique Leuenberger 2013-10-14 20:57:50 UTC
(In reply to comment #17)
> Created an attachment (id=257173) [details] [review]
> same patch as above, but with "From:" line

I can confirm the patch to work on my system; Alt-F no longer opens the gnome-terminal menu.
I applied the patch on top of GTK+ 3.10.1
Comment 19 Ankur Sinha (FranciscoD) 2013-10-15 12:49:21 UTC
Hi,

Any chance this can be fixed in 3.10.1, or is it too late for that now?

Thanks,
Ankur
Comment 20 Ankur Sinha (FranciscoD) 2013-10-23 11:41:22 UTC
Fixed for me. Thanks:

gtk3-3.10.2-2.fc20.x86_64
Comment 21 Ankur Sinha (FranciscoD) 2014-02-21 05:42:49 UTC
This seems to have crept back in:

[asinha@ankur-laptop  ~]$ rpm -q gtk3
gtk3-3.11.7-1.fc20.x86_64

Disabling mnemonics in the settings has no effect on using "alt f" etc. again.

Reopening.
Comment 22 Ankur Sinha (FranciscoD) 2014-02-21 05:44:18 UTC
[asinha@ankur-laptop  ~]$ rpm -q gnome-terminal
gnome-terminal-3.11.0-2.fc20.x86_64
Comment 23 Matthias Clasen 2014-03-03 23:42:00 UTC
It has not 'crept back in'. The setting was only granted a stay for the 3.10 cycle. The plan going forward is for gnome-terminal to get rid of its menubar.
Comment 24 Matthias Clasen 2014-03-04 00:00:03 UTC
And now I've granted it another stay for 3.12
Comment 25 Volker Sobek (weld) 2014-03-24 15:13:19 UTC
I don't know why, but for current master/3.12 this issue is still present; disabling mnemonics in gnome-terminal's settings still opens the File menu when pressing Alt+F.
Comment 26 Volker Sobek (weld) 2014-03-24 15:14:51 UTC
I should mention that the setting for disabling/enabling the menu accelerator (F10) works correctly.
Comment 28 Volker Sobek (weld) 2014-03-24 18:09:51 UTC
Created attachment 272810 [details] [review]
window: Respect gtk-enable-mnemonics setting

This part was forgotten to be undone in commit ba0542dc51f8, so that
disabling mnemonics in gnome-terminal still didn't work.
Comment 29 Volker Sobek (weld) 2014-03-24 18:22:54 UTC
Btw, I just found the same patch, also as a follow up, on the 3.10 branch:
https://git.gnome.org/browse/gtk+/commit/?h=gtk-3-10&id=75a6a8fbe20560022f9c9f0b830f29edf05750ec