Also revert enable-mnemonics code in gtkwindow, which was forgotten in commit 34cf40e95cb1f0bc4bb98bb14edb03dd86f1dab3.

https://bugzilla.gnome.org/show_bug.cgi?id=708346