gtk/gtkwindow.c
@@ -11800,6 +11800,7 @@ gtk_window_activate_key (GtkWindow   *window,
   GtkKeyHash *key_hash;
   GtkWindowKeyEntry *found_entry = NULL;
   gboolean enable_accels;
+  gboolean enable_mnemonics;
 
   g_return_val_if_fail (GTK_IS_WINDOW (window), FALSE);
   g_return_val_if_fail (event != NULL, FALSE);
@@ -11816,6 +11817,7 @@ gtk_window_activate_key (GtkWindow   *window,
 					      event->group);
 
       g_object_get (gtk_widget_get_settings (GTK_WIDGET (window)),
+                    "gtk-enable-mnemonics", &enable_mnemonics,
                     "gtk-enable-accels", &enable_accels,
                     NULL);
 
@@ -11824,8 +11826,11 @@ gtk_window_activate_key (GtkWindow   *window,
 	  GtkWindowKeyEntry *entry = tmp_list->data;
 	  if (entry->is_mnemonic)
             {
-              found_entry = entry;
-              break;
+              if( enable_mnemonics)
+              {
+                found_entry = entry;
+                break;
+              }
             }
           else 
             {
@@ -11843,7 +11848,8 @@ gtk_window_activate_key (GtkWindow   *window,
     {
       if (found_entry->is_mnemonic)
         {
-          return gtk_window_mnemonic_activate (window, found_entry->keyval,
+          if( enable_mnemonics)
+            return gtk_window_mnemonic_activate (window, found_entry->keyval,
                                                found_entry->modifiers);
         }
       else
